# mtbls-validation

./: .gitignore  .gitlab-ci.yml  CHANGES.md  README.md  build_bundle.sh  pyproject.toml
.github/workflows/: build.yaml
docs/: MetaboLightsRules.md
docs/file-structures/assay-file-structure/: ce-ms.md  di-ms.md  fia-ms.md  gc-fid.md  gc-ms.md  gcxgc-ms.md  lc-dad.md  lc-ms.md  maldi-ms.md  mrimaging.md  ms.md  msimaging.md  nmr.md
docs/file-structures/maf-file-structure/: ms.md  nmr.md
docs/file-structures/sample-file-structure/: sample-file.md
docs/validation-rules/: assay-validation-rules.md  file-validation-rules.md  input-validation-rules.md  investigation-validation-rules.md  metabolite-validation-rules.md  sample-validation-rules.md
json/: violations.json  violations_2.0.5.json  violations_2.0.6.json
scripts/: check_unit_tests.py  create_template_documentation.py  create_validations_summary.py  models.py  sync_rules.py  update.py  utils.py
test-data/: input.json
validation/: functions.rego  phase1_definitions.rego  phase1_summary.rego  phase1_violations.rego  phase1_violations_assay.rego  phase1_violations_assignment.rego  phase1_violations_input.rego  phase1_violations_investigation.rego  phase1_violations_sample.rego  phase2_definitions.rego  phase2_summary.rego  phase2_violations.rego  phase2_violations_assays.rego  phase2_violations_samples.rego  phase3_summary.rego  phase3_violations.rego  phase4_summary.rego  phase4_violations.rego  report.rego  summary.rego  summary_functions.rego
validation/schemas/: study-model-schema.json
(+126 files in other folders)
