[tool.poetry]
name = "mtbls-validation"
version = "0.1.0"
description = "MetaboLights Validation Framework"
authors = ["MetaboLights Team <metabolights-help@ebi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.10.2"
pandas = ">=2.2.3"
openpyxl = ">=3.1.5"
metabolights-utils = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
